<resources>
    <string name="main_title" translatable="false">RodJokenpo</string>
    <string name="app_name" translatable="false">@string/main_title</string>
    <string name="button_new_game">New Game</string>
    <string name="button_exit">Exit</string>
    <string name="button_sobre">Sobre</string>
    <string name="developed_by">Desenvolvido por Rodrigo Rangel</string>
    <string name="main_subtitle">Turn your games into unforgettable moments.</string>
    <string name="label_goal">Goal</string>
    <string name="label_restart">Restart Game</string>
    <string name="label_end_game">End Game</string>
    <string name="label_home">Home</string>
    <string name="label_away">Away</string>
    <string name="label_event_name">Event Name</string>
    <string name="label_event_title">Let\'s start!</string>
    <string name="label_event_subtitle">"Informe o nome do jogador!"</string>
    <string name="hint_event">Ex: João</string>
    <string name="label_home_title">Time da casa!</string>
    <string name="label_home_subtitle">What is the home team?</string>
    <string name="label_hint_home">Ex.: Palmeiras</string>
    <string name="label_away_subtitle">What is the away team?</string>
    <string name="hint_away">Ex.: Joao</string>
    <string name="label_start_game">Start Game</string>
    <string name="label_away_title">Away team!</string>
    <string name="label_next">Next</string>
</resources>
