<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <TextView
            android:textColor="@color/mainLogoColor"
            android:text="@string/main_title"
            android:gravity="center"
            android:textSize="@dimen/main_title_font_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvTitle"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="64dp"
            app:layout_constraintTop_toTopOf="parent"/>

    <TextView
            android:textColor="#FFF"
            android:text="@string/developed_by"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvFooter"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent"/>

    <Button
            android:text="@string/button_new_game"
            style="@style/custom_button"
            android:id="@+id/btNewGame"
            app:layout_constraintBottom_toTopOf="@+id/btSobre" android:layout_marginBottom="68dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="1.0" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/tvTitle" app:layout_constraintVertical_bias="1.0"/>

    <Button
            android:textSize="@dimen/text_button_font_size"
            android:text="@string/button_sobre"
            android:id="@+id/btSobre"
            style="@style/custom_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginBottom="28dp" app:layout_constraintBottom_toTopOf="@+id/btExit"/>

    <Button
            android:textSize="@dimen/text_button_font_size"
            android:text="@string/button_exit"
            android:id="@+id/btExit"
            style="@style/custom_button"
            app:layout_constraintBottom_toTopOf="@+id/tvFooter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginBottom="148dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>