<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <TextView
            android:text="@string/label_event_subtitle"
            style="@style/subtitle_game_wizard"
            android:id="@+id/textView2"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="32dp"/>

    <EditText
            android:hint="@string/hint_event"
            style="@style/input_wizard"
            android:id="@+id/inputPlayer"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            app:layout_constraintStart_toStartOf="@+id/textView2"
            app:layout_constraintEnd_toEndOf="@+id/textView2"/>

    <Button
            style="@style/custom_button"
            android:text="@string/label_next"
            android:id="@+id/btNextStep"
            android:layout_marginTop="32dp"

            app:layout_constraintTop_toBottomOf="@+id/inputPlayer"
            app:layout_constraintStart_toStartOf="@+id/inputPlayer"
            app:layout_constraintEnd_toEndOf="@+id/inputPlayer"/>

</androidx.constraintlayout.widget.ConstraintLayout>